@@ -1,31 +1,29 @@
-# $NetBSD: Makefile,v 1.14 2012/10/03 22:14:02 wiz Exp $
+# $NetBSD: Makefile,v 1.15 2012/10/08 09:21:08 asau Exp $
 #
 
-SVNREV=		11
-DISTNAME=	mkv2mp4
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}-0.0alpha${SVNREV}
-PKGREVISION=	4
+DISTNAME=	mkv2mp4-20121208
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/-/-0.0./}
 CATEGORIES=	multimedia
-MASTER_SITES=	http://mkv2mp4.googlecode.com/svn-history/r${SVNREV}/trunk/
-NO_BUILD=	yes
-
-DISTFILES=	${DISTNAME}.py README
-DIST_SUBDIR=	mkv2mp4
+MASTER_SITES=	${MASTER_SITE_LOCAL}
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://code.google.com/p/mkv2mp4
+HOMEPAGE=	https://github.com/dfwarden/mkv2mp4
 COMMENT=	Remux mkv files to mp4 files compatible with standalone players
-WRKSRC=		${WRKDIR}
+LICENSE=	gnu-gpl-v3
 
-REPLACE_PYTHON=	${DISTNAME}.py
+NO_BUILD=	yes
+
+REPLACE_PYTHON=	mkv2mp4.py
 
 INSTALLATION_DIRS=	bin share/doc/mkv2mp4
 
 do-install:
-	${INSTALL_SCRIPT} ${WRKSRC}/${DISTNAME}.py \
-	    ${DESTDIR}${PREFIX}/bin/${DISTNAME}.py
-	${INSTALL_DATA} ${WRKSRC}/README \
-	    ${DESTDIR}${PREFIX}/share/doc/${DISTNAME}/README
+	${INSTALL_SCRIPT} ${WRKSRC}/mkv2mp4.py \
+	    ${DESTDIR}${PREFIX}/bin
+	${INSTALL_DATA} ${WRKSRC}/README* \
+	    ${DESTDIR}${PREFIX}/share/doc/mkv2mp4
+	${INSTALL_DATA} ${WRKSRC}/COPYING \
+	    ${DESTDIR}${PREFIX}/share/doc/mkv2mp4
 
 .include "../../lang/python/application.mk"
 .include "../../multimedia/ffmpeg/buildlink3.mk"
