@@ -1,3 +1,5 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2009/01/23 15:00:05 jmcneill Exp $
+@comment $NetBSD$
 bin/mkv2mp4.py
+share/doc/mkv2mp4/COPYING
 share/doc/mkv2mp4/README
+share/doc/mkv2mp4/README.md
