@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.35 2012/10/01 15:30:33 ryoon Exp $
+# $NetBSD: Makefile,v 1.36 2012/10/23 17:18:09 asau Exp $
 #
 
-DISTNAME=	aria2-1.15.2
+DISTNAME=	aria2-1.16.0
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=aria2/}
 EXTRACT_SUFX=	.tar.bz2
