@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.13 2011/07/14 06:00:07 ryoon Exp $
+@comment $NetBSD$
 bin/aria2c
 man/man1/aria2c.1
 man/ru/man1/aria2c.1
@@ -12,6 +12,7 @@ share/doc/aria2/xmlrpc/aria2mon
 share/doc/aria2/xmlrpc/aria2rpc
 share/locale/ar/LC_MESSAGES/aria2.mo
 share/locale/bg/LC_MESSAGES/aria2.mo
+share/locale/bn/LC_MESSAGES/aria2.mo
 share/locale/ca/LC_MESSAGES/aria2.mo
 share/locale/da/LC_MESSAGES/aria2.mo
 share/locale/de/LC_MESSAGES/aria2.mo
@@ -19,19 +20,27 @@ share/locale/el/LC_MESSAGES/aria2.mo
 share/locale/en@boldquot/LC_MESSAGES/aria2.mo
 share/locale/en@quot/LC_MESSAGES/aria2.mo
 share/locale/es/LC_MESSAGES/aria2.mo
+share/locale/fa/LC_MESSAGES/aria2.mo
 share/locale/fi/LC_MESSAGES/aria2.mo
+share/locale/fil/LC_MESSAGES/aria2.mo
 share/locale/fr/LC_MESSAGES/aria2.mo
 share/locale/he/LC_MESSAGES/aria2.mo
+share/locale/hr/LC_MESSAGES/aria2.mo
 share/locale/hu/LC_MESSAGES/aria2.mo
 share/locale/id/LC_MESSAGES/aria2.mo
 share/locale/it/LC_MESSAGES/aria2.mo
 share/locale/ja/LC_MESSAGES/aria2.mo
+share/locale/kk/LC_MESSAGES/aria2.mo
 share/locale/ko/LC_MESSAGES/aria2.mo
+share/locale/ms/LC_MESSAGES/aria2.mo
+share/locale/nb/LC_MESSAGES/aria2.mo
 share/locale/nl/LC_MESSAGES/aria2.mo
 share/locale/nn/LC_MESSAGES/aria2.mo
+share/locale/oc/LC_MESSAGES/aria2.mo
 share/locale/pl/LC_MESSAGES/aria2.mo
 share/locale/pt/LC_MESSAGES/aria2.mo
 share/locale/pt_BR/LC_MESSAGES/aria2.mo
+share/locale/ro/LC_MESSAGES/aria2.mo
 share/locale/ru/LC_MESSAGES/aria2.mo
 share/locale/sk/LC_MESSAGES/aria2.mo
 share/locale/sr/LC_MESSAGES/aria2.mo
@@ -41,4 +50,5 @@ share/locale/tr/LC_MESSAGES/aria2.mo
 share/locale/uk/LC_MESSAGES/aria2.mo
 share/locale/vi/LC_MESSAGES/aria2.mo
 share/locale/zh_CN/LC_MESSAGES/aria2.mo
+share/locale/zh_HK/LC_MESSAGES/aria2.mo
 share/locale/zh_TW/LC_MESSAGES/aria2.mo
