@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.3767 2012/12/08 23:53:22 wiz Exp $
+$NetBSD: CHANGES-2012,v 1.3769 2012/12/09 08:11:45 ryoon Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -5795,3 +5795,5 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated graphics/enblend-enfuse to 4.1 [adam 2012-12-08]
 	Updated devel/hdf5 to 1.8.10 [adam 2012-12-08]
 	Updated devel/hdf5-c++ to 1.8.10 [adam 2012-12-08]
+	Updated net/aria2 to 1.16.0 [ryoon 2012-12-09]
+	Updated multimedia/mkv2mp4 to 0.0.20121208 [ryoon 2012-12-09]
